--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   	<meta charset="utf-8">
   </head>
   <body>
-  	<iframe src="http://101.43.174.113:8080" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
+  	<iframe src="http://101.43.174.113:8080" width="100%" height="500" frameborder="0" allowfullscreen style="height:100vh;"></iframe>
   </body>
 </html>
