--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   	<meta charset="utf-8">
   </head>
   <body>
-  	<iframe id="myapp" src="http://101.43.174.113:8080" width="100%" height="500" frameborder="0" allowfullscreen style="height:100vh;"></iframe>
+    <div>
+      <a onclick="javascript:myapp = document.getElementById('myapp');myapp.src = 'https://www.17coding.net';">17coding</a>
+      <a onclick="javascript:myapp = document.getElementById('myapp');myapp.src = 'http://101.43.174.113:8080';">NocoDB</a>
+    </div>
+    <iframe id="myapp" src="http://101.43.174.113:8080" width="100%" height="500" frameborder="0" allowfullscreen style="height:100vh;"></iframe>
   </body>
 </html>
