--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   </head>
   <body>
     <div>
-      <a href="#" onclick="javascript:myapp = document.getElementById('myapp');myapp.src = 'https://www.17coding.net';">17coding</a>
-      <a href="#" onclick="javascript:myapp = document.getElementById('myapp');myapp.src = 'http://101.43.174.113:8080';">NocoDB</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://www.17coding.net';">17coding</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://playground.17coding.net';">BlocklyGames</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://toontalk.17coding.net';">ToonTalk</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net';">SqueakJS</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://101.43.174.113:8080';">NocoDB</a>
     </div>
     <iframe id="myapp" src="http://101.43.174.113:8080" width="100%" height="500" frameborder="0" allowfullscreen style="height:100vh;"></iframe>
   </body>
