--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   </head>
   <body>
     <div>
-      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://www.17coding.net';">17coding</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://playground.17coding.net';">BlocklyGames</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://toontalk.17coding.net';">ToonTalk</a>
-      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net';">SqueakJS</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net/scratch/#fullscreen=true';">Scratch</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net/etoys/#fullscreen=true';">Etoys</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://snap.17coding.net';">Snap</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://101.43.174.113:8080';">NocoDB</a>
     </div>
-    <iframe id="myapp" src="http://101.43.174.113:8080" width="100%" height="500" frameborder="0" allowfullscreen style="height:100vh;"></iframe>
+    <iframe id="myapp" src="https://playground.17coding.net" width="100%" height="500" frameborder="0" allowfullscreen style="height:100vh;"></iframe>
   </body>
 </html>
