--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net/scratch/#fullscreen=true';">Scratch</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net/etoys/#fullscreen=true';">Etoys</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://snap.17coding.net';">Snap</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://ai2.17coding.net';">App Inventor</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://101.43.174.113:1880';">Node-RED</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://101.43.174.113:8080';">NocoDB</a>
     </div>
