--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://playground.17coding.net';">BlocklyGames</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://toontalk.17coding.net';">ToonTalk</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net/scratch/#fullscreen=true';">Scratch</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://17codingnet.github.io/xcratch.github.io/editor';">Scratch3</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net/etoys/#fullscreen=true';">Etoys</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://snap.17coding.net';">Snap</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://ai2.17coding.net';">App Inventor</a>
