adding Micro:bit More

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://playground.17coding.net';">BlocklyGames</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://toontalk.17coding.net';">ToonTalk</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net/scratch/#fullscreen=true';">Scratch</a>
-      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://17codingnet.github.io/xcratch.github.io/editor';">Scratch3</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net/etoys/#fullscreen=true';">Etoys</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://snap.17coding.net';">Snap</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://ai2.17coding.net';">App Inventor</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://101.43.174.113:1880';">Node-RED</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://101.43.174.113:8080';">NocoDB</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://17codingnet.github.io/xcratch.github.io/editor';">Scratch3 Extension</a>
+      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://17codingnet.github.io/microbit-more.github.io/editor';">Micro:bit More</a>
     </div>
     <iframe id="myapp" src="https://playground.17coding.net" width="100%" height="500" frameborder="0" allowfullscreen style="height:100vh;"></iframe>
   </body>
