--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://squeak.17coding.net/etoys/#fullscreen=true';">Etoys</a>
       <a href="#" onclick="javascript:document.getElementById('myapp').src = 'https://snap.17coding.net';">Snap</a>
       <a href="http://ai2.17coding.net" target="_blank">App Inventor</a>
-      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://101.43.174.113:1880';">Node-RED</a>
-      <a href="#" onclick="javascript:document.getElementById('myapp').src = 'http://101.43.174.113:8080';">NocoDB</a>
+      <a href="http://101.43.174.113:1880" target="_blank">Node-RED</a>
+      <a href="http://101.43.174.113:8080" target="_blank">NocoDB</a>
     </div>
     <iframe id="myapp" src="https://playground.17coding.net" width="100%" height="500" frameborder="0" allowfullscreen style="height:100vh;"></iframe>
   </body>
