--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
         </section>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8081" target="_blank">NocoDB1</a>
+            <a href="http://101.43.174.113:8081" target="_blank">NocoDB1(cxg)</a>
           </div>
         </div>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8082" target="_blank">NocoDB2</a>
+            <a href="http://101.43.174.113:8082" target="_blank">NocoDB2(lce)</a>
           </div>
         </div>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8083" target="_blank">NocoDB3</a>
+            <a href="http://101.43.174.113:8083" target="_blank">NocoDB3(szw)</a>
           </div>
         </div>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8084" target="_blank">NocoDB4</a>
+            <a href="http://101.43.174.113:8084" target="_blank">NocoDB4(clb)</a>
           </div>
         </div>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8085" target="_blank">NocoDB5</a>
+            <a href="http://101.43.174.113:8085" target="_blank">NocoDB5(jxc)</a>
           </div>
         </div>
       </div>
