--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             <a href="http://101.43.174.113:8085" target="_blank">NocoDB5(jxc)</a>
           </div>
         </div>
+        <div class="card">
+          <div class="card-content">
+            <a href="http://101.43.174.113:8086" target="_blank">NocoDB6(sj)</a>
+          </div>
+        </div>
       </div>
       <div class="panel">
         <section class="hero is-primary">
