--- a/index.html
+++ b/index.html
@@ -18,32 +18,37 @@
         </section>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8081" target="_blank">NocoDB1(cxg)</a>
+            <a href="http://101.43.174.113:8081" target="_blank">NocoDB1(zhw)</a>
           </div>
         </div>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8082" target="_blank">NocoDB2(lce)</a>
+            <a href="http://101.43.174.113:8082" target="_blank">NocoDB2(cxg)</a>
           </div>
         </div>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8083" target="_blank">NocoDB3(szw)</a>
+            <a href="http://101.43.174.113:8083" target="_blank">NocoDB3(lce)</a>
           </div>
         </div>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8084" target="_blank">NocoDB4(clb)</a>
+            <a href="http://101.43.174.113:8084" target="_blank">NocoDB4(szw)</a>
           </div>
         </div>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8085" target="_blank">NocoDB5(jxc)</a>
+            <a href="http://101.43.174.113:8085" target="_blank">NocoDB5(clb)</a>
           </div>
         </div>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8086" target="_blank">NocoDB6(sj)</a>
+            <a href="http://101.43.174.113:8086" target="_blank">NocoDB6(jxc)</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <a href="http://101.43.174.113:8087" target="_blank">NocoDB7(sj)</a>
           </div>
         </div>
       </div>
