--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         </section>
         <div class="card">
           <div class="card-content">
+            <a href="http://101.43.174.113:8080" target="_blank">NocoDB</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
             <a href="http://101.43.174.113:8081" target="_blank">NocoDB1(zhw)</a>
           </div>
         </div>
