update to nodered

--- a/index.html
+++ b/index.html
@@ -18,42 +18,12 @@
         </section>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8080" target="_blank">NocoDB</a>
+            <a href="http://nocodb.17coding.net" target="_blank">NocoDB(17Coding)</a>
           </div>
         </div>
         <div class="card">
           <div class="card-content">
-            <a href="http://101.43.174.113:8081" target="_blank">NocoDB1(zhw)</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-content">
-            <a href="http://101.43.174.113:8082" target="_blank">NocoDB2(cxg)</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-content">
-            <a href="http://101.43.174.113:8083" target="_blank">NocoDB3(lce)</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-content">
-            <a href="http://101.43.174.113:8084" target="_blank">NocoDB4(szw)</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-content">
-            <a href="http://101.43.174.113:8085" target="_blank">NocoDB5(clb)</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-content">
-            <a href="http://101.43.174.113:8086" target="_blank">NocoDB6(jxc)</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-content">
-            <a href="http://101.43.174.113:8087" target="_blank">NocoDB7(sj)</a>
+            <a href="http://101.43.174.113:8080" target="_blank">NocoDB(8080)</a>
           </div>
         </div>
       </div>
@@ -67,32 +37,42 @@
         </section>
         <div class="card">
             <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1887" target="_blank">Node-RED1</a>
+              <a class="content" href="http://101.43.174.113:1881" target="_blank">Node-RED1(zhw)</a>
             </div>
         </div>
         <div class="card">
             <div class="card-content">
-             <a class="content" href="http://101.43.174.113:1882" target="_blank">Node-RED2</a>
+             <a class="content" href="http://101.43.174.113:1882" target="_blank">Node-RED2(cxg)</a>
             </div>
         </div>
         <div class="card">
             <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1883" target="_blank">Node-RED3</a>
+              <a class="content" href="http://101.43.174.113:1883" target="_blank">Node-RED3(lce)</a>
            </div>
         </div>
         <div class="card">
             <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1884" target="_blank">Node-RED4</a>
+              <a class="content" href="http://101.43.174.113:1884" target="_blank">Node-RED4(clb)</a>
            </div>
         </div>
         <div class="card">
             <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1884" target="_blank">Node-RED5</a>
+              <a class="content" href="http://101.43.174.113:1885" target="_blank">Node-RED5(szw)</a>
            </div>
         </div>
         <div class="card">
             <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1886" target="_blank">Node-RED6</a>
+              <a class="content" href="http://101.43.174.113:1886" target="_blank">Node-RED6(sj)</a>
+           </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
+              <a class="content" href="http://101.43.174.113:1887" target="_blank">Node-RED7(jxc)</a>
+           </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
+              <a class="content" href="http://101.43.174.113:1888" target="_blank">Node-RED8(jcj)</a>
            </div>
         </div>
       </div>
