--- a/index.html
+++ b/index.html
@@ -37,42 +37,12 @@
         </section>
         <div class="card">
             <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1881" target="_blank">Node-RED1(zhw)</a>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-content">
-             <a class="content" href="http://101.43.174.113:1882" target="_blank">Node-RED2(cxg)</a>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1883" target="_blank">Node-RED3(lce)</a>
+              <a class="content" href="http://101.43.174.113:1888" target="_blank">Node-RED(primary)</a>
            </div>
         </div>
         <div class="card">
             <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1884" target="_blank">Node-RED4(clb)</a>
-           </div>
-        </div>
-        <div class="card">
-            <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1885" target="_blank">Node-RED5(szw)</a>
-           </div>
-        </div>
-        <div class="card">
-            <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1886" target="_blank">Node-RED6(sj)</a>
-           </div>
-        </div>
-        <div class="card">
-            <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1887" target="_blank">Node-RED7(jxc)</a>
-           </div>
-        </div>
-        <div class="card">
-            <div class="card-content">
-              <a class="content" href="http://101.43.174.113:1888" target="_blank">Node-RED8(jcj)</a>
+              <a class="content" href="http://101.43.174.113:1887" target="_blank">Node-RED(secondary)</a>
            </div>
         </div>
       </div>
