--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>17coding labs</title>
+  	<title>17coding Labs</title>
   	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bulma.min.css" />
@@ -43,6 +43,30 @@
         <div class="card">
             <div class="card-content">
               <a class="content" href="http://101.43.174.113:1887" target="_blank">Node-RED(secondary)</a>
+           </div>
+        </div>
+      </div>
+      <div class="panel">
+        <section class="hero is-warning">
+          <div class="hero-body">
+            <div class="subtitle">
+              Frontend Playground
+            </div>
+          </div>
+        </section>
+        <div class="card">
+            <div class="card-content">
+              <a class="content" href="https://playground.17coding.net" target="_blank">Blockly Games</a>
+           </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
+              <a class="content" href="https://snap.17coding.net" target="_blank">Snap</a>
+           </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
+              <a class="content" href="http://ai2.17coding.net" target="_blank">App Inventor</a>
            </div>
         </div>
       </div>
