--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         </section>
         <div class="card">
             <div class="card-content">
+              <a class="content" href="http://101.43.174.113:1880" target="_blank">Node-RED(lab)</a>
+           </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
               <a class="content" href="http://101.43.174.113:1888" target="_blank">Node-RED(primary)</a>
            </div>
         </div>
